# Haskell-Web-Page

./: LocalsDB.db  Webpage.cabal  interface.glade
.stack-work/install/x86_64-linux/lts-6.35/7.10.3/flag-cache/: Cabal-1.22.8.0-7538a8e6fff081dd4308c295dcb029b4  HDBC-2.4.0.1-7aed366a6f7fd066e774b5b8a321ff3a  HDBC-odbc-2.5.0.1-98f9e159db301a3a3b478bf0ef740e5c  HDBC-postgresql-2.3.2.4-05d88d9adf82b0893df1e251785bb9b1  HDBC-sqlite3-2.3.3.1-6807c33f3ebef2c33c701aacd74731de  QuickCheck-2.8.2-4a8ff054680a1e6817d7a2f4ce006391  alex-3.1.7  base-compat-0.9.3-78fc0898dde79627a85c271f0d6cd3e9  cairo-0.13.1.1-c9ca6b328c45f8abd7fa8b1593a9477b  code-page-0.1.3-246eee9c4cc320898dc260b4d91bed99  concurrent-extra-0.7.0.11-1f68f078952508048279e95904a06aff  convertible-1.1.1.0-fc34b7502292a651b4a16db2c1def9e6  doctest-0.11.2-884b333cd4a0d97d04d4920118b06317  ghc-paths-0.1.0.9-02cfe80f4d1f8c639ca9f2ea01c8e6d2  gio-0.13.1.1-1469387371593f7cea485063d1e44f58  glib-0.13.2.2-ff3526e9cb214b264394fd706a20061d  gtk2hs-buildtools-0.13.0.5  gtk3-0.14.2-9565b24524f2d3178dbcb5106ba0892c  happy-1.19.5  hashable-1.2.4.0-c29003bfae8c430b8eee5615bfa3766d  hashtables-1.2.1.1-bdddfe8836b6a35ccc6658855ae4b04c  mtl-2.2.1-3af90341e75ee52dfc4e3143b4e5d219  network-2.6.3.2-4eed005bee56337da53673ace6cf3091  old-locale-1.0.0.7-0db938eb141b01f4936a21aef6b843bf  old-time-1.1.0.3-4494378134a1c0eadea2f9ea5411834e  pango-0.13.1.1-d37889a3f7f0cc3951d5ca6ed2d260cf  parsec-3.1.11-83053501155eaca87e7a9a2d5e017593  (+9 more)
src/: DataBaseLocals.hs  DataTypes.hs  Functions.hs  Main.hs  MainGUI.hs
(+25 files in other folders)
