name: Webpage
version: 0.0.1
cabal-version: 1.12
build-type: Simple
license: AllRightsReserved
data-files:ventana.glade
executable Webpage
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        HDBC -any,
        HDBC-sqlite3 -any,
        HDBC-postgresql -any,
        HDBC-odbc -any,
        network -any,
        transformers -any,
        gtk2hs-buildtools -any,
        gtk -any,
        semigroups -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        DataTypes
        Functions
        DataBaseLocals
        MainGUI
    ghc-options: -ferror-spans

test-suite test-Webpage
    type: exitcode-stdio-1.0
    main-is: Main.hs
    build-depends:
        QuickCheck -any,
        base -any,
        doctest -any,
        HDBC -any,
        HDBC-sqlite3 -any,
        HDBC-postgresql -any,
        HDBC-odbc -any,
        network -any,
        transformers -any,
        gtk2hs-buildtools -any,
        gtk -any,
        semigroups -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        DataTypes
        Functions
        DataBaseLocals
        MainGUI
    ghc-options: -ferror-spans
